@@ -25,9 +25,8 @@
  * @test
  * @modules java.base/sun.nio.ch
  *          jdk.incubator.foreign/jdk.internal.foreign
- * @run testng/othervm -Dforeign.restricted=permit TestByteBuffer
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestByteBuffer
  */
-
 
 import jdk.incubator.foreign.MappedMemorySegments;
 import jdk.incubator.foreign.MemoryAccess;
@@ -36,6 +35,7 @@ import jdk.incubator.foreign.MemoryLayout;
 import jdk.incubator.foreign.MemoryAddress;
 import jdk.incubator.foreign.MemorySegment;
 import jdk.incubator.foreign.MemoryLayout.PathElement;
+import jdk.incubator.foreign.ResourceScope;
 import jdk.incubator.foreign.SequenceLayout;
 
 import java.io.File;
@@ -80,7 +80,7 @@ import jdk.internal.foreign.NativeMemorySegmentImpl;
 import org.testng.SkipException;
 import org.testng.annotations.*;
 import sun.nio.ch.DirectBuffer;
-import static jdk.incubator.foreign.MemorySegment.*;
+
 import static org.testng.Assert.*;
 
 public class TestByteBuffer {
@@ -99,37 +99,37 @@ public class TestByteBuffer {
         }
     }
 
-    static SequenceLayout tuples = MemoryLayout.ofSequence(500,
-            MemoryLayout.ofStruct(
+    static SequenceLayout tuples = MemoryLayout.sequenceLayout(500,
+            MemoryLayout.structLayout(
                     MemoryLayouts.BITS_32_BE.withName("index"),
                     MemoryLayouts.BITS_32_BE.withName("value")
             ));
 
-    static SequenceLayout bytes = MemoryLayout.ofSequence(100,
+    static SequenceLayout bytes = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_8_BE
     );
 
-    static SequenceLayout chars = MemoryLayout.ofSequence(100,
+    static SequenceLayout chars = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_16_BE
     );
 
-    static SequenceLayout shorts = MemoryLayout.ofSequence(100,
+    static SequenceLayout shorts = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_16_BE
     );
 
-    static SequenceLayout ints = MemoryLayout.ofSequence(100,
+    static SequenceLayout ints = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_32_BE
     );
 
-    static SequenceLayout floats = MemoryLayout.ofSequence(100,
+    static SequenceLayout floats = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_32_BE
     );
 
-    static SequenceLayout longs = MemoryLayout.ofSequence(100,
+    static SequenceLayout longs = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_64_BE
     );
 
-    static SequenceLayout doubles = MemoryLayout.ofSequence(100,
+    static SequenceLayout doubles = MemoryLayout.sequenceLayout(100,
             MemoryLayouts.BITS_64_BE
     );
 
@@ -186,7 +186,8 @@ public class TestByteBuffer {
 
     @Test
     public void testOffheap() {
-        try (MemorySegment segment = MemorySegment.allocateNative(tuples)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(tuples, scope);
             initTuples(segment, tuples.elementCount().getAsLong());
 
             ByteBuffer bb = segment.asByteBuffer();
@@ -230,14 +231,14 @@ public class TestByteBuffer {
 
     @Test
     public void testDefaultAccessModesMappedSegment() throws Throwable {
-        try (MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_WRITE)) {
-            assertTrue(segment.hasAccessModes(ALL_ACCESS));
-            assertEquals(segment.accessModes(), ALL_ACCESS);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_WRITE, scope);
+            assertFalse(segment.isReadOnly());
         }
 
-        try (MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_ONLY)) {
-            assertTrue(segment.hasAccessModes(ALL_ACCESS & ~WRITE));
-            assertEquals(segment.accessModes(), ALL_ACCESS & ~WRITE);
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_ONLY, scope);
+            assertTrue(segment.isReadOnly());
         }
     }
 
@@ -247,27 +248,29 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        //write to channel
-        try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_WRITE)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            //write to channel
+            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
             initTuples(segment, tuples.elementCount().getAsLong());
             MappedMemorySegments.force(segment);
         }
 
-        //read from channel
-        try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            //read from channel
+            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
             checkTuples(segment, segment.asByteBuffer(), tuples.elementCount().getAsLong());
         }
     }
 
-    @Test(dataProvider = "mappedOps", expectedExceptions = IllegalStateException.class)
+    @Test(dataProvider = "mappedOps", expectedExceptions = UnsupportedOperationException.class)
     public void testMappedSegmentOperations(MappedSegmentOp mappedBufferOp) throws Throwable {
         File f = new File("test3.out");
         f.createNewFile();
         f.deleteOnExit();
 
-        MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 8, FileChannel.MapMode.READ_WRITE);
+        MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 8, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
         assertTrue(segment.isMapped());
-        segment.close();
+        segment.scope().close();
         mappedBufferOp.apply(segment);
     }
 
@@ -281,8 +284,9 @@ public class TestByteBuffer {
 
         // write one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            //write to channel
-            try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), i, tuples.byteSize(), FileChannel.MapMode.READ_WRITE)) {
+            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+                //write to channel
+                MemorySegment segment = MemorySegment.mapFile(f.toPath(), i, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
                 initTuples(segment, 1);
                 MappedMemorySegments.force(segment);
             }
@@ -290,8 +294,9 @@ public class TestByteBuffer {
 
         // check one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            //read from channel
-            try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY)) {
+            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+                //read from channel
+                MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
                 checkTuples(segment, segment.asByteBuffer(), 1);
             }
         }
@@ -342,7 +347,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferOps")
     public void testScopedBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
         Buffer bb;
-        try (MemorySegment segment = MemorySegment.allocateNative(bytes)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
             bb = bufferFactory.apply(segment.asByteBuffer());
         }
         //outside of scope!!
@@ -353,7 +359,7 @@ public class TestByteBuffer {
             Throwable cause = ex.getCause();
             if (cause instanceof IllegalStateException) {
                 //all get/set buffer operation should fail because of the scope check
-                assertTrue(ex.getCause().getMessage().contains("already closed"));
+                assertTrue(ex.getCause().getMessage().contains("Already closed"));
             } else {
                 //all other exceptions were unexpected - fail
                 fail("Unexpected exception", cause);
@@ -367,7 +373,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferHandleOps")
     public void testScopedBufferAndVarHandle(VarHandle bufferHandle) {
         ByteBuffer bb;
-        try (MemorySegment segment = MemorySegment.allocateNative(bytes)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
             bb = segment.asByteBuffer();
             for (Map.Entry<MethodHandle, Object[]> e : varHandleMembers(bb, bufferHandle).entrySet()) {
                 MethodHandle handle = e.getKey().bindTo(bufferHandle)
@@ -389,7 +396,7 @@ public class TestByteBuffer {
                 handle.invoke(e.getValue());
                 fail();
             } catch (IllegalStateException ex) {
-                assertTrue(ex.getMessage().contains("already closed"));
+                assertTrue(ex.getMessage().contains("Already closed"));
             } catch (UnsupportedOperationException ex) {
                 //skip
             } catch (Throwable ex) {
@@ -400,7 +407,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider = "bufferOps")
     public void testDirectBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
-        try (MemorySegment segment = MemorySegment.allocateNative(bytes)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
             Buffer bb = bufferFactory.apply(segment.asByteBuffer());
             assertTrue(bb.isDirect());
             DirectBuffer directBuffer = ((DirectBuffer)bb);
@@ -412,7 +420,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeOffheap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (MemorySegment segment = MemorySegment.allocateNative(seq)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -449,7 +458,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeRoundtripNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (MemorySegment segment = MemorySegment.allocateNative(seq)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
             initializer.accept(segment);
             MemorySegment second = MemorySegment.ofByteBuffer(segment.asByteBuffer());
             checker.accept(second);
@@ -459,18 +469,17 @@ public class TestByteBuffer {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testBufferOnClosedScope() {
         MemorySegment leaked;
-        try (MemorySegment segment = MemorySegment.allocateNative(bytes)) {
-            leaked = segment;
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            leaked = MemorySegment.allocateNative(bytes, scope);
         }
         ByteBuffer byteBuffer = leaked.asByteBuffer(); // ok
         byteBuffer.get(); // should throw
     }
 
-    @Test(expectedExceptions = UnsupportedOperationException.class)
+    @Test(expectedExceptions = IllegalStateException.class)
     public void testTooBigForByteBuffer() {
-        try (MemorySegment segment = MemoryAddress.NULL.asSegmentRestricted(Integer.MAX_VALUE + 10L)) {
-            segment.asByteBuffer();
-        }
+        MemorySegment segment = MemoryAddress.NULL.asSegment(Integer.MAX_VALUE + 10L, ResourceScope.globalScope());
+        segment.asByteBuffer();
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
@@ -478,7 +487,7 @@ public class TestByteBuffer {
         File f = new File("testNeg1.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), 0L, -1, FileChannel.MapMode.READ_WRITE);
+        MemorySegment.mapFile(f.toPath(), 0L, -1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
@@ -486,7 +495,7 @@ public class TestByteBuffer {
         File f = new File("testNeg2.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), -1, 1, FileChannel.MapMode.READ_WRITE);
+        MemorySegment.mapFile(f.toPath(), -1, 1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
     }
 
     @Test
@@ -497,7 +506,8 @@ public class TestByteBuffer {
 
         int SIZE = Byte.MAX_VALUE;
 
-        try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, SIZE, FileChannel.MapMode.READ_WRITE)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, SIZE, FileChannel.MapMode.READ_WRITE, scope);
             for (byte offset = 0; offset < SIZE; offset++) {
                 MemoryAccess.setByteAtOffset(segment, offset, offset);
             }
@@ -505,7 +515,8 @@ public class TestByteBuffer {
         }
 
         for (int offset = 0 ; offset < SIZE ; offset++) {
-            try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), offset, SIZE - offset, FileChannel.MapMode.READ_ONLY)) {
+            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+                MemorySegment segment = MemorySegment.mapFile(f.toPath(), offset, SIZE - offset, FileChannel.MapMode.READ_ONLY, scope);
                 assertEquals(MemoryAccess.getByte(segment), offset);
             }
         }
@@ -517,20 +528,22 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         //RW
-        try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_WRITE)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_WRITE, scope);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
-            assertTrue((segment.accessModes() & (READ | WRITE)) == (READ | WRITE));
+            assertFalse(segment.isReadOnly());
             MappedMemorySegments.force(segment);
             MappedMemorySegments.load(segment);
             MappedMemorySegments.isLoaded(segment);
             MappedMemorySegments.unload(segment);
         }
         //RO
-        try (MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_ONLY)) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_ONLY, scope);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
-            assertTrue((segment.accessModes() & (READ | WRITE)) == READ);
+            assertTrue(segment.isReadOnly());
             MappedMemorySegments.force(segment);
             MappedMemorySegments.load(segment);
             MappedMemorySegments.isLoaded(segment);
@@ -541,15 +554,16 @@ public class TestByteBuffer {
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testMapCustomPath() throws IOException {
         Path path = Path.of(URI.create("jrt:/"));
-        MemorySegment.mapFile(path, 0L, 0L, FileChannel.MapMode.READ_WRITE);
+        MemorySegment.mapFile(path, 0L, 0L, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
     }
 
     @Test(dataProvider="resizeOps")
     public void testCopyHeapToNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (MemorySegment nativeArray = MemorySegment.allocateNative(bytes);
-             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes])) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment nativeArray = MemorySegment.allocateNative(bytes, 1, scope);
+            MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(heapArray);
             nativeArray.copyFrom(heapArray);
             checker.accept(nativeArray);
@@ -560,8 +574,9 @@ public class TestByteBuffer {
     public void testCopyNativeToHeap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (MemorySegment nativeArray = MemorySegment.allocateNative(seq);
-             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes])) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment nativeArray = MemorySegment.allocateNative(seq, scope);
+            MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(nativeArray);
             heapArray.copyFrom(nativeArray);
             checker.accept(heapArray);
@@ -571,60 +586,59 @@ public class TestByteBuffer {
     @Test
     public void testDefaultAccessModesOfBuffer() {
         ByteBuffer rwBuffer = ByteBuffer.wrap(new byte[4]);
-        try (MemorySegment segment = MemorySegment.ofByteBuffer(rwBuffer)) {
-            assertTrue(segment.hasAccessModes(ALL_ACCESS));
-            assertEquals(segment.accessModes(), ALL_ACCESS);
+        {
+            MemorySegment segment = MemorySegment.ofByteBuffer(rwBuffer);
+            assertFalse(segment.isReadOnly());
         }
 
-        ByteBuffer roBuffer = rwBuffer.asReadOnlyBuffer();
-        try (MemorySegment segment = MemorySegment.ofByteBuffer(roBuffer)) {
-            assertTrue(segment.hasAccessModes(ALL_ACCESS & ~WRITE));
-            assertEquals(segment.accessModes(), ALL_ACCESS & ~WRITE);
+        {
+            ByteBuffer roBuffer = rwBuffer.asReadOnlyBuffer();
+            MemorySegment segment = MemorySegment.ofByteBuffer(roBuffer);
+            assertTrue(segment.isReadOnly());
         }
     }
 
     @Test(dataProvider="bufferSources")
     public void testBufferToSegment(ByteBuffer bb, Predicate<MemorySegment> segmentChecker) {
         MemorySegment segment = MemorySegment.ofByteBuffer(bb);
-        assertEquals(segment.hasAccessModes(MemorySegment.WRITE), !bb.isReadOnly());
+        assertEquals(segment.isReadOnly(), bb.isReadOnly());
         assertTrue(segmentChecker.test(segment));
         assertTrue(segmentChecker.test(segment.asSlice(0, segment.byteSize())));
-        assertTrue(segmentChecker.test(segment.withAccessModes(MemorySegment.READ)));
         assertEquals(bb.capacity(), segment.byteSize());
         //another round trip
         segment = MemorySegment.ofByteBuffer(segment.asByteBuffer());
-        assertEquals(segment.hasAccessModes(MemorySegment.WRITE), !bb.isReadOnly());
+        assertEquals(segment.isReadOnly(), bb.isReadOnly());
         assertTrue(segmentChecker.test(segment));
         assertTrue(segmentChecker.test(segment.asSlice(0, segment.byteSize())));
-        assertTrue(segmentChecker.test(segment.withAccessModes(MemorySegment.READ)));
         assertEquals(bb.capacity(), segment.byteSize());
     }
 
     @Test(dataProvider="bufferSources")
     public void bufferProperties(ByteBuffer bb, Predicate<MemorySegment> _unused) {
-        try (MemorySegment segment = MemorySegment.ofByteBuffer(bb)) {
-            ByteBuffer buffer = segment.asByteBuffer();
-            assertEquals(buffer.position(), 0);
-            assertEquals(buffer.capacity(), segment.byteSize());
-            assertEquals(buffer.limit(), segment.byteSize());
-        }
+        MemorySegment segment = MemorySegment.ofByteBuffer(bb);
+        ByteBuffer buffer = segment.asByteBuffer();
+        assertEquals(buffer.position(), 0);
+        assertEquals(buffer.capacity(), segment.byteSize());
+        assertEquals(buffer.limit(), segment.byteSize());
     }
 
     @Test
     public void testRoundTripAccess() {
-        try(MemorySegment ms = MemorySegment.allocateNative(4)) {
-            MemorySegment msNoAccess = ms.withAccessModes(MemorySegment.READ); // READ is required to make BB
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            MemorySegment ms = MemorySegment.allocateNative(4, 1, scope);
+            MemorySegment msNoAccess = ms.asReadOnly();
             MemorySegment msRoundTrip = MemorySegment.ofByteBuffer(msNoAccess.asByteBuffer());
-            assertEquals(msNoAccess.accessModes(), msRoundTrip.accessModes());
+            assertEquals(msNoAccess.isReadOnly(), msRoundTrip.isReadOnly());
         }
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testDeadAccessOnClosedBufferSegment() {
-        MemorySegment s1 = MemorySegment.allocateNative(MemoryLayouts.JAVA_INT);
+        MemorySegment s1 = MemorySegment.allocateNative(MemoryLayouts.JAVA_INT, ResourceScope.newConfinedScope());
         MemorySegment s2 = MemorySegment.ofByteBuffer(s1.asByteBuffer());
 
-        s1.close(); // memory freed
+        // memory freed
+        s1.scope().close();
 
         MemoryAccess.setInt(s2, 10); // Dead access!
     }
@@ -633,13 +647,14 @@ public class TestByteBuffer {
     public void testIOOnSharedSegmentBuffer() throws IOException {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
-        try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10).share();
+        try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.WRITE) ;
+             ResourceScope scope = ResourceScope.newSharedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(10, 1, scope);
             for (int i = 0; i < 10; i++) {
                 MemoryAccess.setByteAtOffset(segment, i, (byte) i);
             }
             ByteBuffer bb = segment.asByteBuffer();
-            segment.close();
+            segment.scope().close();
             channel.write(bb);
         }
     }
@@ -649,12 +664,12 @@ public class TestByteBuffer {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10);
+            MemorySegment segment = MemorySegment.allocateNative(10, ResourceScope.newConfinedScope());
             for (int i = 0; i < 10; i++) {
                 MemoryAccess.setByteAtOffset(segment, i, (byte) i);
             }
             ByteBuffer bb = segment.asByteBuffer();
-            segment.close();
+            segment.scope().close();
             channel.write(bb);
         }
     }
@@ -664,7 +679,7 @@ public class TestByteBuffer {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10);
+            MemorySegment segment = MemorySegment.allocateNative(10, ResourceScope.newConfinedScope());
             for (int i = 0; i < 10; i++) {
                 MemoryAccess.setByteAtOffset(segment, i, (byte) i);
             }
@@ -673,9 +688,10 @@ public class TestByteBuffer {
         }
     }
 
-    @Test(dataProvider="segments")
-    public void buffersAndArraysFromSlices(Supplier<MemorySegment> segmentSupplier) {
-        try (MemorySegment segment = segmentSupplier.get()) {
+    @Test
+    public void buffersAndArraysFromSlices() {
+        try (ResourceScope scope = ResourceScope.newSharedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(16, scope);
             int newSize = 8;
             var slice = segment.asSlice(4, newSize);
 
@@ -690,9 +706,10 @@ public class TestByteBuffer {
         }
     }
 
-    @Test(dataProvider="segments")
-    public void viewsFromSharedSegment(Supplier<MemorySegment> segmentSupplier) {
-        try (MemorySegment segment = segmentSupplier.get().share()) {
+    @Test
+    public void viewsFromSharedSegment() {
+        try (ResourceScope scope = ResourceScope.newSharedScope()) {
+            MemorySegment segment = MemorySegment.allocateNative(16, scope);
             var byteBuffer = segment.asByteBuffer();
             byteBuffer.asReadOnlyBuffer();
             byteBuffer.slice(0, 8);
@@ -702,7 +719,7 @@ public class TestByteBuffer {
     @DataProvider(name = "segments")
     public static Object[][] segments() throws Throwable {
         return new Object[][] {
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16) },
+                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, ResourceScope.newImplicitScope()) },
                 { (Supplier<MemorySegment>) () -> MemorySegment.ofArray(new byte[16]) }
         };
     }
